--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,12 @@ services:
       - DB_PASS=supersecretpassword
     depends_on:
       - db
+    links:
+      - db:db
   db:
     image: postgres:10-alpine
     environment:
       - POSTGRES_DB=app
       - POSTGRES_USER=postgres
-      - POSTGRESS_PASSWORD=supersecretpassword
+      - DB_PASS=supersecretpassword
+      - POSTGRES_HOST_AUTH_METHOD=trust
